--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,10 +1,11 @@
 .navbar {
-    position: sticky;
+    position: fixed;
     top: 0;
     display: flex;
     width: 100%;
     height: 70px;
     justify-content: space-between;
+    z-index: 9999;
 }
 
 .navbar a {
