--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -2,6 +2,76 @@
     position: absolute;
     width: 400px;
     height: 100%;
-    background-color: grey;
+    background-color: #191919;
     z-index: 999;
+    color: #8b8b8b;
+}
+
+.profilContainer {
+    width: 100%;
+    height: 100px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+.profil {
+    align-items: center;
+    gap: 15px;
+    padding-left: 15px;
+}
+
+.close-sideBar {
+    padding-right: 15px;
+    cursor: pointer;
+}
+
+.notifications {
+    height: 70px;
+    border-top: 3px solid black;
+}
+
+.mesVideos {
+    height: 50px;
+    gap: 15px;
+    border-top: 2px solid black;
+    border-bottom: 3px solid black;
+}
+
+.categories {
+    overflow-y: scroll;
+    height: calc(100% - 228px);
+}
+
+.categorie,
+.mesVideos,
+.notifications {
+    position: relative;
+    padding-left: 20px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.categorie:hover {
+    background-color: #2b2b2b;
+    color: #b9b9b9;
+}
+
+.categorie-active::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    width: 5px;
+    height: 100%;
+    background-color: #ff0000;
+}
+
+.categorie-active {
+    color: white;
+    font-weight: extra-bold;
+}
+
+.categorie-active:hover {
+    color: white;
+    font-weight: extra-bold;
 }
