--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #141414;
 }
 
 code {
@@ -13,12 +13,8 @@ code {
     monospace;
 }
 
-
+/* 
 * {
   border: 1px solid red;
   color: white;
-}
-
-a {
-  border: 1px solid blue;
-}
+} */
